--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,10 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@v12
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Load GHA Key
+        run: |
+          eval `ssh-agent -s`
+          ssh-add - <<< '${{ secrets.GHA_DEPLOY_KEY }}'
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v23
         with:
