--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,7 +21,7 @@ jobs:
         - name: Install Nix
           uses: DeterminateSystems/nix-installer-action@v12
           with:
-            github-token: ${{ secrets.GITHUB_TOKEN }}
+            github-token: ${{ secrets.GHA_PAT }}
         - name: Run the Magic Nix Cache
           uses: DeterminateSystems/magic-nix-cache-action@v7
         - name: Free Disk Space (Linux)
