--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,10 +13,9 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@v12
         with:
           github-token: ${{ secrets.GHA_PAT }}
-      - name: Load GHA Key
-        run: |
-          eval `ssh-agent -s`
-          ssh-add - <<< '${{ secrets.GHA_DEPLOY_KEY }}'
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.GHA_DEPLOY_KEY }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v23
         with:
