--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,17 +12,14 @@ jobs:
       - name: Install Nix
         uses: DeterminateSystems/nix-installer-action@v12
         with:
-          github-token: ${{ secrets.GHA_PAT }}
-      - uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.GHA_DEPLOY_KEY }}
-      - name: Check SSH key
-        run: ssh-add -l
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          extra-conf: |
+            access-tokens = github.com:${{ secrets.GHA_PAT }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v23
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           pr-title: "Update flake.lock"
-          pr-lables: |
+          pr-labels: |
             automated
             dependencies
