--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           extra-conf: |
-            access-tokens = github.com:${{ secrets.GHA_PAT }}
+            access-tokens = github.com=${{ secrets.GHA_PAT }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v23
         with:
