--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,8 +13,10 @@ jobs:
         uses: DeterminateSystems/nix-installer-action@v12
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          extra-conf: |
-            access-tokens = github.com=${{ secrets.GHA_PAT }}
+      - name: Setup SSH Key
+        uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.GHA_DK }}
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v23
         with:
