--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -22,8 +22,8 @@ jobs:
           uses: DeterminateSystems/nix-installer-action@v17
           with:
             github-token: ${{ secrets.GHA_PAT }}
-        - name: Run the Magic Nix Cache
-          uses: DeterminateSystems/magic-nix-cache-action@v9
+        - name: Use FlakeHub Cache
+          uses: DeterminateSystems/flakehub-cache-action@v9
         - name: Free Disk Space (Linux)
           if: matrix.platform.name == 'Linux'
           run: |
