--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,7 +23,7 @@ jobs:
           with:
             github-token: ${{ secrets.GHA_PAT }}
         - name: Use FlakeHub Cache
-          uses: DeterminateSystems/flakehub-cache-action@v9
+          uses: DeterminateSystems/flakehub-cache-action@main
         - name: Free Disk Space (Linux)
           if: matrix.platform.name == 'Linux'
           run: |
