--- a/apps/aarch64-darwin/build
+++ b/apps/aarch64-darwin/build
@@ -5,8 +5,18 @@ YELLOW='\033[1;33m'
 RED='\033[1;31m'
 NC='\033[0m'
 
+if [[ $# -eq 0 ]]; then
+  echo "A host is required to properly build the flake"
+  echo "Usage: nix run '.#build' -- HOST_NAME"
+  exit 1
+fi
+
+HOST=$1
 SYSTEM_TYPE="aarch64-darwin"
-FLAKE_SYSTEM="darwinConfigurations.${SYSTEM_TYPE}.system"
+FLAKE_SYSTEM="darwinConfigurations.${HOST}.system"
+
+# Shift the args so any additional ones are sent to the script
+shift 1
 
 export NIXPKGS_ALLOW_UNFREE=1
 
