--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -24,8 +24,8 @@ jobs:
             github-token: ${{ secrets.GITHUB_PATH }}
             extra-conf:
               lazy-trees = true
-        - name: Use FlakeHub Cache
-          uses: DeterminateSystems/flakehub-cache-action@main
+        # - name: Use FlakeHub Cache
+        #   uses: DeterminateSystems/flakehub-cache-action@main
         - name: Free Disk Space (Linux)
           if: matrix.platform.name == 'Linux'
           run: |
