--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "modules/shared/config/spartanvim"]
-	path = modules/shared/config/spartanvim
-	url = git@github.com:ELD/spartanvim.git
+[submodule "modules/shared/config/sigmavim"]
+	path = modules/shared/config/sigmavim
+	url = git@github.com:ELD/sigmavim.git
