Rearrange Ghostty configuration, update deps
- Clean out the unused shared module configurations (i.e. p10k, etc)
- Move Ghostty config from a single file to a folder with a submodule
  for shaders
- Add `bacon` code checker
- Add `$HOME/.cargo/bin` to sessionPath

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/shared/config/sigmavim"]
 	path = modules/shared/config/sigmavim
 	url = git@github.com:ELD/sigmavim.git
+[submodule "modules/shared/config/ghostty/ghostty-shaders"]
+	path = modules/shared/config/ghostty/ghostty-shaders
+	url = git@github.com:hackr-sh/ghostty-shaders.git
