--- a/modules/shared/config/starship.toml
+++ b/modules/shared/config/starship.toml
@@ -161,7 +161,7 @@ vimcmd_visual_symbol = '[❮](bold fg:yellow)'
 show_milliseconds = true
 format = " in $duration "
 style = "bg:lavender"
-disabled = false
+disabled = true
 show_notifications = false
 min_time_to_notify = 45000
 
