--- a/modules/shared/config/ghostty/config
+++ b/modules/shared/config/ghostty/config
@@ -1,36 +1,18 @@
-font-size = 16
-
 font-family = Berkeley Mono Variable
 
-font-feature = +calt
-font-feature = +liga
-font-feature = +dlig
+font-variation = wdth=90
+font-variation = wght=400
+font-variation = slnt=0
 
-# font-family = OperatorMonoSSmLig Nerd Font Medium
-# font-feature = +calt
-# font-feature = +dlig
-# font-feature = +liga
-# font-feature = +ss01
-# font-feature = +ss03
-# font-feature = +ss05
-# font-feature = +ss08
-# font-feature = +ss09
-# font-feature = +ss10
-# font-feature = +ss11
-# font-feature = +ss12
+font-size = 15
 
-# adjust-cell-height = 40%
-
-# theme = catppuccin-macchiato
-# theme = oldworld
-# theme = vague
 theme = nightingale
 
 custom-shader = ghostty-shaders/cursor_blaze.glsl
 
 macos-titlebar-style = tabs
-window-height = 55
-window-width = 186
+window-height = 69
+window-width = 228
 window-padding-color = extend
 
 keybind = global:ctrl+grave_accent=toggle_quick_terminal
@@ -38,7 +20,9 @@ keybind = global:ctrl+grave_accent=toggle_quick_terminal
 term = xterm-ghostty
 
 auto-update = download
-auto-update-channel = stable
+auto-update-channel = tip
 
 window-save-state = always
 
+background-blur = macos-glass-regular
+background-opacity = 0.75
